--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -209,8 +209,10 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
-bind = $mainMod, period, workspace, e+1
-bind = $mainMod, comma, workspace,e-1
+bind = $mainMod, period, workspace, +1
+bind = $mainMod, comma, workspace,-1
+bind = ,mouse:276, workspace, +1
+bind = ,mouse:275, workspace, -1
 
 bind = $mainMod, minus, movetoworkspace,special
 bind = $mainMod, equal, togglespecialworkspace
