did some testing no luck

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -169,6 +169,17 @@ bind = $mainMod, Tab, changegroupactive, f
 bind = $mainMod SHIFT, G,exec,hyprctl --batch "keyword general:gaps_out 5;keyword general:gaps_in 3"
 bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
 
+# Copy Paste Save Forward Backward Rebind
+# bind = $mainMod, C, exec, wl-copy
+# bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
+# bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
+# bind = $mainMod, C, exec, wl-copy &> ~/Downloads/copy.log
+# bind = $mainMod, V, exec, wtype "$(wl-paste)" &> ~/Downloads/paste.log
+
+# bind = $mainMod, S, exec, wtype -M ctrl -k s -m ctrl
+
+# bind = $mainMod, Z, exec, wtype -M ctrl -k z -m ctrl
+# bind = $mainMod, X, exec, wtype -M ctrl -M shift -k x -m ctrl -m shift
 # Volume control
 
 bind=,XF86AudioLowerVolume,exec,pamixer -ud 3 && pamixer --get-volume > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
@@ -211,8 +222,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 bind = $mainMod, period, workspace, +1
 bind = $mainMod, comma, workspace,-1
-bind = ,mouse:276, workspace, +1
-bind = ,mouse:275, workspace, -1
+bind = $mainMod, mouse:276, workspace, +1
+bind = $mainMod, mouse:275, workspace, -1
 
 bind = $mainMod, minus, movetoworkspace,special
 bind = $mainMod, equal, togglespecialworkspace
