--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -155,7 +155,7 @@ bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
-bind = $mainMod, V, togglefloating,
+# bind = $mainMod, V, togglefloating,
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
 bind = $mainMod, SPACE, exec, wofi
 bind = $mainMod, F, fullscreen
@@ -171,10 +171,12 @@ bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword gen
 
 # Copy Paste Save Forward Backward Rebind
 # bind = $mainMod, C, exec, wl-copy
-# bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
-# bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
-# bind = $mainMod, C, exec, wl-copy &> ~/Downloads/copy.log
-# bind = $mainMod, V, exec, wtype "$(wl-paste)" &> ~/Downloads/paste.log
+bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
+bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
+# bind = ,mouse:276, exec, wl-copy &> ~/Downloads/copy.log
+# bind = ,mouse:275, exec, wtype "$(wl-paste)" &> ~/Downloads/paste.log
+# bind = ,mouse:276, exec, wtype -M ctrl -k c -m ctrl
+# bind = ,mouse:275, exec, wtype -M ctrl -k v -m ctrl
 
 # bind = $mainMod, S, exec, wtype -M ctrl -k s -m ctrl
 
