--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -155,7 +155,7 @@ bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
-# bind = $mainMod, V, togglefloating,
+bind = $mainMod, V, togglefloating,
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
 bind = $mainMod, SPACE, exec, wofi
 bind = $mainMod, F, fullscreen
@@ -170,9 +170,10 @@ bind = $mainMod SHIFT, G,exec,hyprctl --batch "keyword general:gaps_out 5;keywor
 bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
 
 # Copy Paste Save Forward Backward Rebind
+# Won't work becuase, your alway be clikding #mainmod ctrl c 
 # bind = $mainMod, C, exec, wl-copy
-bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
-bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
+# bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
+# bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
 # bind = ,mouse:276, exec, wl-copy &> ~/Downloads/copy.log
 # bind = ,mouse:275, exec, wtype "$(wl-paste)" &> ~/Downloads/paste.log
 # bind = ,mouse:276, exec, wtype -M ctrl -k c -m ctrl
@@ -224,8 +225,8 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 bind = $mainMod, period, workspace, +1
 bind = $mainMod, comma, workspace,-1
-bind = $mainMod, mouse:276, workspace, +1
-bind = $mainMod, mouse:275, workspace, -1
+bind = , mouse:276, workspace, +1
+bind = , mouse:275, workspace, -1
 
 bind = $mainMod, minus, movetoworkspace,special
 bind = $mainMod, equal, togglespecialworkspace
@@ -262,8 +263,8 @@ bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, +1
+bind = $mainMod, mouse_up, workspace, -1
 
 binds {
      workspace_back_and_forth = 1
