--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,11 @@
 /pupgui
 /qt5ct
 /spotify
-/swaylock
+/lazydocker
 /user-dirs.dirs
 /user-dirs.locale
 /vesktop
 /heroic
+/go
+/zoom.conf
+/zoomus.conf
