--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -6,6 +6,11 @@
 
 monitor=,preferred,auto,auto
 
+# unscale XWayland
+xwayland {
+  force_zero_scaling = true
+}
+
 # Slow app launch fix
 exec-once = systemctl --user import-environment &
 exec-once = hash dbus-update-activation-environment 2>/dev/null &
@@ -169,20 +174,6 @@ bind = $mainMod, Tab, changegroupactive, f
 bind = $mainMod SHIFT, G,exec,hyprctl --batch "keyword general:gaps_out 5;keyword general:gaps_in 3"
 bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
 
-# Copy Paste Save Forward Backward Rebind
-# Won't work becuase, your alway be clikding #mainmod ctrl c 
-# bind = $mainMod, C, exec, wl-copy
-# bind = $mainMod, C, exec, wtype -M ctrl -k c -m ctrl
-# bind = $mainMod, V, exec, wtype -M ctrl -k v -m ctrl
-# bind = ,mouse:276, exec, wl-copy &> ~/Downloads/copy.log
-# bind = ,mouse:275, exec, wtype "$(wl-paste)" &> ~/Downloads/paste.log
-# bind = ,mouse:276, exec, wtype -M ctrl -k c -m ctrl
-# bind = ,mouse:275, exec, wtype -M ctrl -k v -m ctrl
-
-# bind = $mainMod, S, exec, wtype -M ctrl -k s -m ctrl
-
-# bind = $mainMod, Z, exec, wtype -M ctrl -k z -m ctrl
-# bind = $mainMod, X, exec, wtype -M ctrl -M shift -k x -m ctrl -m shift
 # Volume control
 
 bind=,XF86AudioLowerVolume,exec,pamixer -ud 3 && pamixer --get-volume > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
@@ -201,7 +192,7 @@ bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 bind = $mainMod SHIFT, P, exec, gnome-calculator
-bind = $mainMod, L, exec, swaylock-fancy -e -K -p 10 -f Hack-Regular
+bind = $mainMod, L, exec, swaylock
 #bind = $mainMod, P, exec, ~/.scripts/dmshot
 
 bind = $mainMod, O, exec, killall -SIGUSR2 waybar
@@ -249,6 +240,8 @@ bind = $mainMod CTRL, 9, movetoworkspace, 9
 bind = $mainMod CTRL, 0, movetoworkspace, 10
 bind = $mainMod CTRL, left, movetoworkspace, -1
 bind = $mainMod CTRL, right, movetoworkspace, +1
+bind = $mainMod, mouse:276, movetoworkspace, +1
+bind = $mainMod, mouse:275, movetoworkspace, -1
 
 # same as above, but doesnt switch to the workspace
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
