--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -308,6 +308,9 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 # Disk utility
 exec-once = udiskie &
 
+# Blue light filter
+exec-once = wlsunset -l 37.5 -L -122.0 -T 4500 &
+
 # Float Necessary Windows
 windowrule=float,Rofi
 windowrule=float,pavucontrol
