--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,6 +11,8 @@ xwayland {
   force_zero_scaling = true
 }
 
+env = XCURSOR_SIZE,24
+
 # Slow app launch fix
 exec-once = systemctl --user import-environment &
 exec-once = hash dbus-update-activation-environment 2>/dev/null &
