--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,11 @@
-/.avalonia-build-tasks
-/.dmenurc
-/Code
-/Electron
-/JetBrains
-/Kvantum
-/Slack
-/autostart
-/dconf
-/discord
-/fish
-/github-copilot
-/glib-2.0
-/gpick
-/gtk-3.0
-/gtk-4.0
-/mako
-/menus
-/micro
-/mimeapps.list
-/obs-studio
-/pavucontrol.ini
-/pupgui
-/qt5ct
-/spotify
-/lazydocker
-/user-dirs.dirs
-/user-dirs.locale
-/vesktop
-/heroic
-/go
-/zoom.conf
-/zoomus.conf
-/matplotlib
-/inkscape
-/google-chrome
-/GIMP
-/gtk-2.0
-/chromium
-Unknown Organization/zoom.conf
-/.wrangler
-/xpad
+*
+
+!eww/
+!swaylock
+!wallpapers
+!wofi
+!waybar
+!code-flags.conf
+!hypr
+!alacritty
+!btop
