--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -64,7 +64,7 @@ general {
 decoration {
     active_opacity = 1
     inactive_opacity = 1
-    fullscreen_opacity = 1.0
+    fullscreen_opacity = 1
 
     rounding = 4
     blur {
@@ -164,6 +164,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
+# bind = $mainMod, SPACE, exec, waybar -c .config/waybar/config-hypr & wofi; killall -SIGKILL waybar
 bind = $mainMod, SPACE, exec, wofi
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
