added new waybar

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -76,13 +76,13 @@ decoration {
         ignore_opacity = false
     }
 
-    drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    shadow_ignore_window = true
+    # drop_shadow = false
+    # shadow_range = 4
+    # shadow_render_power = 3
+    # shadow_ignore_window = true
 
     dim_inactive = false
-    col.shadow = rgba(1a1a1aee)
+    # col.shadow = rgba(1a1a1aee)
 }
 
 # Blur for waybar
@@ -111,7 +111,7 @@ animations {
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    no_gaps_when_only = false
+    # no_gaps_when_only = false
     force_split = 0
     special_scale_factor = 0.8
     split_width_multiplier = 1.0
@@ -122,7 +122,6 @@ dwindle {
 
 # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
 master {
-    no_gaps_when_only = false
     new_status = master
     special_scale_factor = 0.8
 }
@@ -164,8 +163,8 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
-# bind = $mainMod, SPACE, exec, waybar -c .config/waybar/config-hypr & wofi; killall -SIGKILL waybar
-bind = $mainMod, SPACE, exec, wofi
+bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
+# bind = $mainMod, SPACE, exec, wofi
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
 #bind = $mainMod, P, pseudo, # dwindle
