--- a/swaylock/config
+++ b/swaylock/config
@@ -2,10 +2,15 @@ ignore-empty-password
 disable-caps-lock-text
 font=Cantarelle Regular
 
+text-color=#ffffff
+ring-color=#ffffff
+line-color=#ffffff
+separator-color=#ffffff
+key-hl-color=#000000
 
 screenshots
-effect-blur=7x5
-effect-vignette=0.5:0.5
+effect-pixelate=50
+effect-vignette=1:1
 
 clock
 timestr=%I:%M %p
