--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -51,7 +51,7 @@ input {
 general {
     gaps_in = 3
     gaps_out = 5
-    border_size = 3
+    border_size = 1
     col.active_border = rgba(999999ff)
     #col.inactive_border = rgba(66333333)
     col.inactive_border = rgba(595959aa)
@@ -67,6 +67,7 @@ decoration {
     fullscreen_opacity = 1
 
     rounding = 4
+
     blur {
         enabled = true
         size = 15
@@ -96,11 +97,12 @@ animations {
     #bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
     bezier = overshot, 0.13, 0.99, 0.29, 1.1
-    animation = windows, 1, 4, overshot, slide
-    animation = windowsOut, 1, 5, default, popin 80%
+    bezier = smoothslide, 0.22, 1, 0.36, 1
+    animation = windows, 1, 4, smoothslide, slide
+    # animation = windowsOut, 1, 5, default, popin 80%
     animation = border, 1, 5, default
     animation = fade, 1, 8, default
-    animation = workspaces, 1, 6, overshot, slide
+    animation = workspaces, 1, 6, smoothslide, slide
 
     #animation = windows, 1, 7, myBezier
     #animation = windowsOut, 1, 7, default, popin 80%
@@ -330,11 +332,11 @@ windowrulev2 = float,class:^(zenity)$
 windowrulev2 = float,class:^()$,title:^(Steam - Self Updater)$
 
 # Increase the opacity
-windowrule=opacity 0.92,Thunar
-windowrule=opacity 0.92,Nautilus
+# windowrule=opacity 0.92,Thunar
+# windowrule=opacity 0.92,Nautilus
 # windowrule=opacity 0.96,discord
-windowrule=opacity 0.96,armcord
-windowrule=opacity 0.96,webcord
+# windowrule=opacity 0.96,armcord
+# windowrule=opacity 0.96,webcord
 
 #---------------#
 # windows rules #
