--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -164,6 +164,7 @@ bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
+bind = $mainMod, W, exec, ~/.config/waybar/modules/toggle_waybar
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
 bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
 # bind = $mainMod, SPACE, exec, wofi
