--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -25,7 +25,7 @@ presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:defaul
 vim_keys = False
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
-rounded_corners = True
+rounded_corners = False
 
 #* Default symbols to use for graph creation, "braille", "block" or "tty".
 #* "braille" offers the highest resolution but might not be included in all fonts.
@@ -53,7 +53,7 @@ graph_symbol_proc = "default"
 shown_boxes = "cpu mem net proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
-update_ms = 2000
+update_ms = 200
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
@@ -154,7 +154,7 @@ custom_cpu_name = ""
 disks_filter = ""
 
 #* Show graphs instead of meters for memory values.
-mem_graphs = True
+mem_graphs = False
 
 #* Show mem box below net box instead of above.
 mem_below_net = False
@@ -211,7 +211,7 @@ net_sync = True
 net_iface = ""
 
 #* Show battery stats in top right if battery is present.
-show_battery = True
+show_battery = False
 
 #* Which battery to use if multiple are present. "Auto" for auto detection.
 selected_battery = "Auto"
