--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,6 +4,7 @@
 # For a full list, see the wiki
 #
 
+# monitor=,preferred,auto,auto, transform, 3
 monitor=,preferred,auto,auto
 
 # unscale XWayland
@@ -11,10 +12,6 @@ xwayland {
   force_zero_scaling = true
 }
 
-env = XCURSOR_SIZE,24
-
-# Slow app launch fix
-exec-once = systemctl --user import-environment &
 exec-once = hash dbus-update-activation-environment 2>/dev/null &
 exec-once = dbus-update-activation-environment --systemd &
 #exec-once = xdg-desktop-portal-hyprland &
@@ -162,12 +159,16 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, alacritty
 bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, Q, killactive,
+bind = $mainMod, BackSpace, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, W, exec, ~/.config/waybar/modules/toggle_waybar
+
 # bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
-bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
-# bind = $mainMod, SPACE, exec, wofi
+# bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
+# bind = $mainMod, SPACE, exec, alacritty --title 'gyr' -e gyr -r
+
+bind = $mainMod, SPACE, exec, wofi
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
 #bind = $mainMod, P, pseudo, # dwindle
@@ -319,6 +320,8 @@ exec-once = wlsunset -l 37.5 -L -122.0 -T 4500 &
 # Float Necessary Windows
 windowrule=float,Rofi
 windowrule=float,pavucontrol
+windowrule=size 1200 800,pavucontrol    
+windowrule=float, title:gyr
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
 windowrulev2 = float,class:^(brave)$,title:^(Save File)$
 windowrulev2 = float,class:^(brave)$,title:^(Open File)$
