--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -49,9 +49,9 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 1
-    col.active_border = rgba(999999ff)
+    col.active_border = rgba(333333ff)
     #col.inactive_border = rgba(66333333)
-    col.inactive_border = rgba(595959aa)
+    col.inactive_border = rgba(111111ff)
 
     layout = dwindle # master|dwindle
 
@@ -168,7 +168,7 @@ bind = $mainMod, W, exec, ~/.config/waybar/modules/toggle_waybar
 # bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
 # bind = $mainMod, SPACE, exec, alacritty --title 'gyr' -e gyr -r
 
-bind = $mainMod, SPACE, exec, wofi
+bind = $mainMod, SPACE, exec, wofi --normal-window
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
 #bind = $mainMod, P, pseudo, # dwindle
