--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,7 @@
+[general]
+live_config_reload = true
+working_directory = "None"
+import = ['~/.config/alacritty/colors.toml']
 
 [env]
 TERM = "xterm-256color"
@@ -7,8 +11,7 @@ WINIT_X11_SCALE_FACTOR = "1"
 dynamic_padding = true
 decorations = "full"
 title = "Alacritty@CachyOS"
-opacity = 0.8
-# opacity = 0.9 #default
+opacity = 0.9
 decorations_theme_variant = "Dark"
 
 [window.dimensions]
@@ -26,31 +29,7 @@ multiplier = 3
 [colors]
 draw_bold_text_with_bright_colors = true
 
-[colors.primary]
-# background = "0x2E3440" #default
-# foreground = "0xD8DEE9" #default
-foreground = "0xFFFFFF"
-
-[colors.normal]
-black = "0x3B4252"
-red = "0xBF616A"
-green = "0xA3BE8C"
-yellow = "0xEBCB8B"
-blue = "0x81A1C1"
-magenta = "0xB48EAD"
-cyan = "0x88C0D0"
-white = "0xE5E9F0"
-
-
-[colors.bright]
-black = "0x4C566A"
-red = "0xBF616A"
-green = "0xA3BE8C"
-yellow = "0xEBCB8B"
-blue = "0x81A1C1"
-magenta = "0xB48EAD"
-cyan = "0x8FBCBB"
-white = "0xECEFF4"
+# Colors here
 
 [font]
 size = 12
@@ -163,6 +142,5 @@ key = "Key0"
 mods = "Control"
 action = "ResetFontSize"
 
-[general]
-live_config_reload = true
-working_directory = "None"
+#[general]
+#working_directory = "None"
