--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -157,6 +157,8 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, alacritty
+# bind = $mainMod, T, exec, ~/.local/bin/zen-x86_64.AppImage
+bind = $mainMod, T, exec, firefox
 bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 bind = $mainMod, Q, killactive,
 bind = $mainMod, BackSpace, killactive,
