--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,48 +1,52 @@
+##########################
+# Hyprland Configuration #
+##########################
 
-#
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-#
 
-# monitor=,preferred,auto,auto, transform, 3
-monitor=,preferred,auto,auto
+#----- Auto Start -----#
 
-# unscale XWayland
+# desktop bus
+exec-once = hash dbus-update-activation-environment 2>/dev/null &
+exec-once = dbus-update-activation-environment --systemd &
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+
+# wallpaper
+# exec-once = swaybg -o \* -i .config/wallpapers/bg.jpg -m fill
+
+# menu bars
+exec-once = waybar -c .config/waybar/config-hypr &
+
+# notification daemon
+exec-once = mako &
+
+# volume feedback bar
+exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
+
+# authentication agent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+
+# disk utility - auto mount and unmount
+exec-once = udiskie &
+
+# blue light filter
+exec-once = wlsunset -l 37.5 -L -122.0 -T 4500 &
+
+#----------------------#
+
+
+monitor = ,preferred,auto,auto
+
 xwayland {
   force_zero_scaling = true
 }
 
-exec-once = hash dbus-update-activation-environment 2>/dev/null &
-exec-once = dbus-update-activation-environment --systemd &
-#exec-once = xdg-desktop-portal-hyprland &
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-# ## Idle configuration
-#
-exec-once = swayidle -w timeout 300 'swaylock -f -c 000000' before-sleep 'swaylock -f -c 000000'
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
-# ## Input configuration
-#
 input {
-    #kb_layout = us,ru
-    kb_layout = us
-    kb_variant =
-    kb_model =
-    #kb_options = grp:caps_toggle,grp_led:caps,altwin:swap_alt_win,ctrl:rctrl_ralt
-    kb_options =
-    kb_rules =
-
     follow_mouse = 2 # 0|1|2|3
-    float_switch_override_focus = 2
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
         natural_scroll = no
     }
-
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -50,87 +54,50 @@ general {
     gaps_out = 5
     border_size = 1
     col.active_border = rgba(333333ff)
-    #col.inactive_border = rgba(66333333)
     col.inactive_border = rgba(111111ff)
-
     layout = dwindle # master|dwindle
-
-    # apply_sens_to_raw=0 # whether to apply the sensitivity to raw input (e.g. used by games where you aim using your mouse)
 }
 
 decoration {
     active_opacity = 1
     inactive_opacity = 1
     fullscreen_opacity = 1
-
     rounding = 4
 
     blur {
         enabled = true
         size = 15
-        passes = 2 # more passes = more resource intensive.
+        passes = 2
         new_optimizations = true
-        xray = true
         ignore_opacity = false
     }
-
-    # drop_shadow = false
-    # shadow_range = 4
-    # shadow_render_power = 3
-    # shadow_ignore_window = true
-
-    dim_inactive = false
-    # col.shadow = rgba(1a1a1aee)
 }
-
-# Blur for waybar
-#blurls = waybar
 
 animations {
     enabled = yes
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    #bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
-    bezier = overshot, 0.13, 0.99, 0.29, 1.1
-    bezier = smoothslide, 0.22, 1, 0.36, 1
+    bezier = smoothslide, 0.22, 1, .3, 1
     animation = windows, 1, 4, smoothslide, slide
-    # animation = windowsOut, 1, 5, default, popin 80%
+
     animation = border, 1, 5, default
     animation = fade, 1, 8, default
     animation = workspaces, 1, 6, smoothslide, slide
-
-    #animation = windows, 1, 7, myBezier
-    #animation = windowsOut, 1, 7, default, popin 80%
-    #animation = fade, 1, 7, default
-    #animation = border, 1, 10, default
-    #animation = workspaces, 1, 6, default
 }
 
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
-    # no_gaps_when_only = false
     force_split = 0
     special_scale_factor = 0.8
     split_width_multiplier = 1.0
     use_active_for_splits = true
     pseudotile = yes # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = yes
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-    special_scale_factor = 0.8
+    use_active_for_splits = no
 }
 
 misc {
-    #disable_autoreload = true
-    disable_hyprland_logo = true
+    disable_hyprland_logo = false
     always_follow_on_dnd = true
     layers_hog_keyboard_focus = true
-    animate_manual_resizes = false
     enable_swallow = true
     swallow_regex =
     focus_on_activate = true
@@ -139,58 +106,47 @@ misc {
 
 gestures {
      workspace_swipe = true
-     workspace_swipe_fingers = 4
-     workspace_swipe_distance = 250
+     workspace_swipe_fingers = 3
      workspace_swipe_invert = true
      workspace_swipe_min_speed_to_force = 15
      workspace_swipe_cancel_ratio = 0.5
-     workspace_swipe_create_new = false
+     workspace_swipe_create_new = true
 }
 
-device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
-}
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+#----- Keybinds -----#
+
 $mainMod = SUPER
+$terminal = alacritty
+$browser = firefox
+$app_launcher = wofi --normal-window
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, alacritty
-# bind = $mainMod, T, exec, ~/.local/bin/zen-x86_64.AppImage
-bind = $mainMod, T, exec, firefox
-bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod, RETURN, exec, $terminal
+bind = $mainMod, T, exec, $browser
+bind = $mainMod, SPACE, exec, wofi --normal-window
 bind = $mainMod, Q, killactive,
 bind = $mainMod, BackSpace, killactive,
 bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, W, exec, ~/.config/waybar/modules/toggle_waybar
 
-# bind = $mainMod, SPACE, exec, rofi -show combi -modi window,run,combi -combi-modi window,run
-# bind = $mainMod, SPACE, exec, eww open dashboard & wofi; eww close dashboard
-# bind = $mainMod, SPACE, exec, alacritty --title 'gyr' -e gyr -r
+bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
 
-bind = $mainMod, SPACE, exec, wofi --normal-window
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
-#bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
 
 bind = $mainMod, K, togglegroup,
 bind = $mainMod, Tab, changegroupactive, f
-
-bind = $mainMod SHIFT, G,exec,hyprctl --batch "keyword general:gaps_out 5;keyword general:gaps_in 3"
-bind = $mainMod , G,exec,hyprctl --batch "keyword general:gaps_out 0;keyword general:gaps_in 0"
 
 # Volume control
 
 bind=,XF86AudioLowerVolume,exec,pamixer -ud 3 && pamixer --get-volume > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
 bind=,XF86AudioRaiseVolume,exec,pamixer -ui 3 && pamixer --get-volume > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
-# mute sound
 bind=,XF86AudioMute,exec,amixer sset Master toggle | sed -En '/\[on\]/ s/.*\[([0-9]+)%\].*/\1/ p; /\[off\]/ s/.*/0/p' | head -1 > /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob
 
 # Playback control
-
 bind=,XF86AudioPlay,exec, playerctl play-pause
 bind=,XF86AudioNext,exec, playerctl next
 bind=,XF86AudioPrev,exec, playerctl previous
@@ -199,9 +155,7 @@ bind=,XF86AudioPrev,exec, playerctl previous
 bind = , XF86MonBrightnessUp, exec, brightnessctl s +5%
 bind = , XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
-bind = $mainMod SHIFT, P, exec, gnome-calculator
 bind = $mainMod, L, exec, swaylock
-#bind = $mainMod, P, exec, ~/.scripts/dmshot
 
 bind = $mainMod, O, exec, killall -SIGUSR2 waybar
 
@@ -271,6 +225,7 @@ binds {
      workspace_back_and_forth = 1
      allow_workspace_cycles = 1
 }
+
 bind = $mainMod,slash,workspace,previous
 
 bind = $mainMod,R,submap,resize
@@ -299,26 +254,6 @@ bind=CTRL SHIFT, j, resizeactive, 0 15
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
-#exec-once = alacritty
-#exec-once = telegram-desktop
-#exec-once = armcord
-exec-once = swaybg -o \* -i .config/wallpapers/bg.jpg -m fill
-#------------#
-# auto start #
-#------------#
-exec-once = waybar -c .config/waybar/config-hypr &
-exec-once = fcitx5 -d &
-exec-once = mako &
-exec-once = nm-applet --indicator &
-exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-
-# Disk utility
-exec-once = udiskie &
-
-# Blue light filter
-exec-once = wlsunset -l 37.5 -L -122.0 -T 4500 &
-
 # Float Necessary Windows
 windowrule=float,Rofi
 windowrule=float,pavucontrol
@@ -337,12 +272,6 @@ windowrulev2 = float,class:^(CachyOSHello)$
 windowrulev2 = float,class:^(zenity)$
 windowrulev2 = float,class:^()$,title:^(Steam - Self Updater)$
 
-# Increase the opacity
-# windowrule=opacity 0.92,Thunar
-# windowrule=opacity 0.92,Nautilus
-# windowrule=opacity 0.96,discord
-# windowrule=opacity 0.96,armcord
-# windowrule=opacity 0.96,webcord
 
 #---------------#
 # windows rules #
@@ -369,7 +298,6 @@ windowrule=rounding 5,termfloat
 windowrule=float,nemo
 windowrule=move 25%-,nemo
 windowrule=size 960 540,nemo
-windowrule=opacity 0.95,title:Telegram
 windowrule=opacity 0.95,title:QQ
 windowrule=opacity 0.95,title:NetEase Cloud Music Gtk4
 windowrule=animation slide right,kitty
