update natural scroll

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,7 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = true
     }
 }
 
