--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -130,7 +130,7 @@ bind = $mainMod SHIFT, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, W, exec, ~/.config/waybar/modules/toggle_waybar
 
-bind = $mainMod, A, exec, grim -g "$(slurp)" - | swappy -f -
+bind = $mainMod, A, exec, ~/.config/hypr/scripts/screenshot
 
 bind = $mainMod, F, fullscreen
 bind = $mainMod, Y, pin
