--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 
 # wallpaper
 # exec-once = swaybg -o \* -i .config/wallpapers/bg.jpg -m fill
+exec-once = hyprpaper
 
 # menu bars
 exec-once = waybar -c .config/waybar/config-hypr &
