--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -54,8 +54,10 @@ general {
     gaps_in = 3
     gaps_out = 5
     border_size = 1
-    col.active_border = rgba(333333ff)
-    col.inactive_border = rgba(111111ff)
+    # col.active_border = rgba(333333ff)
+    # col.inactive_border = rgba(111111ff)
+    col.active_border = rgba(81A1C199)
+    col.inactive_border = rgba(00000000)
     layout = dwindle # master|dwindle
 }
 
