--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -258,14 +258,10 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Float Necessary Windows
-windowrule=float,Rofi
-windowrule=float,pavucontrol
-windowrule=size 1200 800,pavucontrol    
+windowrule=float, class:pavucontrol
+windowrule=size 1200 800, class:pavucontrol    
 windowrule=float, title:gyr
 windowrulev2 = float,class:^()$,title:^(Picture in picture)$
-windowrulev2 = float,class:^(brave)$,title:^(Save File)$
-windowrulev2 = float,class:^(brave)$,title:^(Open File)$
-windowrulev2 = float,class:^(LibreWolf)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float,class:^(xdg-desktop-portal-kde)$
@@ -283,30 +279,6 @@ windowrulev2 = float,class:^()$,title:^(Steam - Self Updater)$
 windowrule=float,title:^(Picture-in-Picture)$
 windowrule=size 960 540,title:^(Picture-in-Picture)$
 windowrule=move 25%-,title:^(Picture-in-Picture)$
-windowrule=float,imv
-windowrule=move 25%-,imv
-windowrule=size 960 540,imv
-windowrule=float,mpv
-windowrule=move 25%-,mpv
-windowrule=size 960 540,mpv
-windowrule=float,danmufloat
-windowrule=move 25%-,danmufloat
-windowrule=pin,danmufloat
-windowrule=rounding 5,danmufloat
-windowrule=size 960 540,danmufloat
-windowrule=float,termfloat
-windowrule=move 25%-,termfloat
-windowrule=size 960 540,termfloat
-windowrule=rounding 5,termfloat
-windowrule=float,nemo
-windowrule=move 25%-,nemo
-windowrule=size 960 540,nemo
-windowrule=opacity 0.95,title:QQ
-windowrule=opacity 0.95,title:NetEase Cloud Music Gtk4
-windowrule=animation slide right,kitty
-windowrule=float,ncmpcpp
-windowrule=animation slide right,alacritty
-windowrule=move 25%-,ncmpcpp
-windowrule=size 960 540,ncmpcpp
-windowrule=noblur,^(firefox)$
-windowrule=noblur,^(waybar)$
+windowrule=animation slide right, class:alacritty
+windowrule=noblur,title: ^(firefox)$
+windowrule=noblur,title: ^(waybar)$
