--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -24,7 +24,7 @@ exec-once = mako &
 exec-once = bash -c "mkfifo /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob && tail -f /tmp/$HYPRLAND_INSTANCE_SIGNATURE.wob | wob & disown" &
 
 # authentication agent
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+exec-once = systemctl --user start hyprpolkitagent
 
 # disk utility - auto mount and unmount
 exec-once = udiskie &
