--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 [general]
 live_config_reload = true
 working_directory = "None"
-import = ['~/.config/alacritty/colors.toml']
+import = ['~/.config/alacritty/catppuccin-frappe.toml']
 
 [env]
 TERM = "xterm-256color"
