updated config for md-render

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,8 +140,8 @@ bind = $mainMod, Y, pin
 bind = $mainMod, P, pseudo,
 bind = $mainMod, J, togglesplit,
 
-bind = $mainMod, K, togglegroup,
-bind = $mainMod, Tab, changegroupactive, f
+# bind = $mainMod, K, togglegroup,
+# bind = $mainMod, Tab, changegroupactive, f
 
 # Volume control
 
