--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/wallpapers/bg.png
-wallpaper = , ~/.config/wallpapers/bg.png
+preload = ~/.config/wallpapers/bg
+wallpaper = , ~/.config/wallpapers/bg
