--- a/mako/config
+++ b/mako/config
@@ -1,5 +1,25 @@
+default-timeout=7000
+
 font=monospace 12
-background-color=#89B4FAE8
-border-size=0
+border-size=1
 border-radius=4
-text-color=#121212FF
+padding=10,15,10,15
+
+background-color=#161314
+text-color=#89B4FA
+border-color=#89B4FA
+
+[urgency=low]
+background-color=#161314
+text-color=#A6E3A1
+border-color=#A6E3A1
+
+[urgency=normal]
+background-color=#161314
+text-color=#89B4FA
+border-color=#89B4FA
+
+[urgency=critical]
+background-color=#161314
+text-color=#F38BA8
+border-color=#F38BA8
