--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -30,8 +30,7 @@ exec-once = systemctl --user start hyprpolkitagent
 exec-once = udiskie &
 
 # blue light filter
-exec-once = wlsunset -l 37.5 -L -122.0 -T 5500 &
-
+exec-once = hyprsunset -t 4000 
 #----------------------#
 
 
