added neovim themes

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,7 +119,7 @@ gestures {
 
 $mainMod = SUPER
 $terminal = alacritty
-$browser = firefox
+$browser = librewolf
 $app_launcher = wofi --normal-window
 
 bind = $mainMod, RETURN, exec, $terminal
